2025-03-20T00:48:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13959591199 # 599
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-20
* notice: last 14d: unq all: 7 8
* notice: prev accum: outdated-unq outdated-all / unq all: 411 1412 / 416 1418
* notice: next accum: outdated-unq outdated-all / unq all: 411 1412 / 418 1420
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-03-19]

2025-03-18T00:49:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13912898316 # 597
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-18
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 408 1409 / 416 1418
* notice: next accum: outdated-unq outdated-all / unq all: 411 1412 / 416 1418
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-03-03] / []

2025-03-17T00:51:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13889213096 # 596
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-17
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 408 1409 / 415 1417
* notice: next accum: outdated-unq outdated-all / unq all: 408 1409 / 416 1418
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-16]

2025-03-15T00:47:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13867742970 # 594